[gd_scene load_steps=4 format=3 uid="uid://biyy31agk8vxb"]

[ext_resource type="Theme" uid="uid://cxq38wk7w6ors" path="res://addons/bearware_tools/bundle-explorer/assets/theme.tres" id="1_jc3oq"]
[ext_resource type="Script" uid="uid://b8rjbjnl8gx7l" path="res://addons/bearware_tools/bundle-explorer/windows/sheet/elements/set.gd" id="2_jc3oq"]
[ext_resource type="Theme" uid="uid://bgxvnpdkfpiwh" path="res://addons/bearware_tools/bundle-explorer/assets/sub_label.tres" id="3_y0qye"]

[node name="Set" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jc3oq")
script = ExtResource("2_jc3oq")

[node name="Details" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Type" type="Label" parent="Details"]
layout_mode = 2
theme = ExtResource("3_y0qye")
text = "Set"

[node name="DisplayName" type="Label" parent="Details"]
layout_mode = 2

[node name="UniqueName" type="Label" parent="Details"]
layout_mode = 2

[node name="MaxSelectable" type="HBoxContainer" parent="Details"]
layout_mode = 2

[node name="Label" type="Label" parent="Details/MaxSelectable"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max Selectable"

[node name="Value" type="SpinBox" parent="Details/MaxSelectable"]
layout_mode = 2

[node name="MinSelectable" type="HBoxContainer" parent="Details"]
layout_mode = 2

[node name="Label" type="Label" parent="Details/MinSelectable"]
layout_mode = 2
size_flags_horizontal = 3
text = "Min Selectable"

[node name="Value" type="SpinBox" parent="Details/MinSelectable"]
layout_mode = 2

[node name="DefaultSelectable" type="HBoxContainer" parent="Details"]
layout_mode = 2

[node name="Label" type="Label" parent="Details/DefaultSelectable"]
layout_mode = 2
size_flags_horizontal = 3
text = "Default Selectable"

[node name="Value" type="SpinBox" parent="Details/DefaultSelectable"]
layout_mode = 2

[node name="Locked" type="HBoxContainer" parent="Details"]
layout_mode = 2

[node name="Label" type="Label" parent="Details/Locked"]
layout_mode = 2
size_flags_horizontal = 3
text = "Locked"

[node name="Value" type="CheckButton" parent="Details/Locked"]
layout_mode = 2

[node name="Elements" type="VBoxContainer" parent="Details"]
layout_mode = 2
